[package]
name = "plitki-gnome"
version = "0.1.0"
authors = ["Ivan Molodetskikh <yalterz@gmail.com>"]
edition = "2021"

[dependencies]
adw = { version = "0.2.0", package = "libadwaita", features = ["v1_2"] }
anyhow = "1.0.66"
crossbeam-channel = "0.5.6"
glib = { version = "0.16.3", features = ["log", "log_macros"] }
gtk = { package = "gtk4", version = "0.5.2" }
log = "0.4.17"
once_cell = "1.16.0"
plitki-core = { path = "../plitki-core" }
plitki-gtk = { path = "../plitki-gtk" }
plitki-map-qua = { path = "../plitki-map-qua" }
rodio = { version = "0.16.0", features = ["symphonia-all"], default-features = false }
triple_buffer = "6.2.0"

[dev-dependencies]
proptest = "1.0.0"
