[package]
name = "plitki-gnome"
version = "0.1.0"
authors = ["Ivan Molodetskikh <yalterz@gmail.com>"]
edition = "2021"

[dependencies]
adw = { version = "0.2.0", package = "libadwaita", features = ["v1_2"] }
anyhow = "1.0.66"
gtk = { package = "gtk4", version = "0.5.2" }
once_cell = "1.16.0"
plitki-audio = { path = "../plitki-audio" }
plitki-core = { path = "../plitki-core" }
plitki-gtk = { path = "../plitki-gtk" }
plitki-map-qua = { path = "../plitki-map-qua" }
tracing = "0.1.37"
tracing-chrome = "0.7.0"
tracing-subscriber = "0.3.16"

[dev-dependencies]
proptest = "1.0.0"
