[package]
name = "plitki-gtk"
version = "0.1.0"
authors = ["Ivan Molodetskikh <yalterz@gmail.com>"]
edition = "2021"

[dependencies]
adw = { version = "0.2.0", package = "libadwaita" }
anyhow = "1.0.66"
glib = { version = "0.16.3", features = ["log", "log_macros"] }
gtk = { package = "gtk4", version = "0.5.2" }
log = "0.4.17"
once_cell = "1.16.0"
plitki-core = { path = "../plitki-core" }
plitki-map-qua = { path = "../plitki-map-qua" }

[dev-dependencies]
proptest = "1.0.0"

[build-dependencies]
glib-build-tools = "0.16.3"
