[package]
name = "plitki-map-qua"
version = "0.1.0"
authors = ["Ivan Molodetskikh <yalterz@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
plitki-core = { path = "../plitki-core" }

[dev-dependencies]
pretty_assertions = "0.6"
proptest = "0.9"
