[package]
name = "plitki-map-qua"
version = "0.1.0"
authors = ["Ivan Molodetskikh <yalterz@gmail.com>"]
edition = "2018"

[dependencies]
plitki-core = { path = "../plitki-core" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
pretty_assertions = "1.3"
proptest = "1.0"
