[package]
name = "plitki-ui-wayland"
version = "0.1.0"
authors = ["Ivan Molodetskikh <yalterz@gmail.com>"]
edition = "2018"

[dependencies]
wayland-client = { version = "0.23", features = [ "dlopen" ] } # dlopen required due to glutin
smithay-client-toolkit = "0.6"
byteorder = "1"
slog = "2.5.2"
slog-term = "2.4.1"
slog-async = "2.3.0"
glutin = "0.22.0-alpha2"
glium = { version = "0.25.1", default_features = false }
takeable-option = "0.5.0"
better-panic = "0.1.2"
plitki-core = { path = "../plitki-core" }
plitki-map-qua = { path = "../plitki-map-qua" }
triple_buffer = { version = "5.0.0", features = [ "raw" ] }
cgmath = "0.17.0"
wayland-protocols = "0.23.5"
libc = "0.2.61"
slog-scope = "4.1.2"
palette = "0.4.1"
rodio = "0.9.0"
structopt = "0.3"
rust_hawktracer = "0.5.0"

[features]
profiling = ["rust_hawktracer/profiling_enabled"]
